--- a/package.json
+++ b/package.json
@@ -63,8 +63,9 @@
         "npm": ">=8.0.0"
     },
     "devDependencies": {
-        "@types/jest": "^29.5.8",
+        "@types/jest": "^29.5.14",
         "@types/node": "^20.9.0",
+        "@types/supertest": "^6.0.3",
         "@typescript-eslint/eslint-plugin": "^6.12.0",
         "@typescript-eslint/parser": "^6.12.0",
         "concurrently": "^8.2.2",
@@ -75,6 +76,8 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "jest": "^29.7.0",
         "prettier": "^3.1.0",
+        "supertest": "^7.1.4",
+        "ts-jest": "^29.4.4",
         "typescript": "^5.2.2"
     },
     "workspaces": [
@@ -83,32 +86,6 @@
         "server",
         "workers"
     ],
-    "jest": {
-        "preset": "ts-jest",
-        "testEnvironment": "node",
-        "roots": [
-            "<rootDir>/tests"
-        ],
-        "testMatch": [
-            "**/__tests__/**/*.ts",
-            "**/?(*.)+(spec|test).ts"
-        ],
-        "collectCoverageFrom": [
-            "src/**/*.{ts,tsx}",
-            "server/**/*.{ts,js}",
-            "workers/**/*.{ts,js}",
-            "!**/*.d.ts",
-            "!**/node_modules/**"
-        ],
-        "coverageThreshold": {
-            "global": {
-                "branches": 80,
-                "functions": 80,
-                "lines": 80,
-                "statements": 80
-            }
-        }
-    },
     "eslintConfig": {
         "extends": [
             "eslint:recommended",
