--- a/src/package.json
+++ b/src/package.json
@@ -37,7 +37,8 @@
   "dependencies": {
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.4",
-    "lucide-react": "^0.292.0"
+    "lucide-react": "^0.292.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.8.0",
