--- a/server/package.json
+++ b/server/package.json
@@ -1,59 +1,63 @@
 {
-    "name": "voice-chat-widget-server",
-    "version": "1.0.0",
-    "description": "Backend server for voice chat widget with WebRTC and Speechmatics integration",
-    "main": "dist/index.js",
-    "scripts": {
-        "dev": "nodemon src/index.ts",
-        "build": "tsc",
-        "start": "node dist/index.js",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:coverage": "jest --coverage",
-        "lint": "eslint src --ext .ts",
-        "lint:fix": "eslint src --ext .ts --fix",
-        "type-check": "tsc --noEmit"
-    },
-    "keywords": [
-        "voice-chat",
-        "webrtc",
-        "speechmatics",
-        "socket.io",
-        "express"
-    ],
-    "author": "Bionic-AI-Solutions",
-    "license": "MIT",
-    "dependencies": {
-        "express": "^4.18.2",
-        "socket.io": "^4.7.4",
-        "cors": "^2.8.5",
-        "helmet": "^7.1.0",
-        "dotenv": "^16.3.1",
-        "winston": "^3.11.0",
-        "joi": "^17.11.0",
-        "axios": "^1.6.2",
-        "ws": "^8.14.2",
-        "multer": "^1.4.5-lts.1",
-        "uuid": "^9.0.1",
-        "redis": "^4.6.10",
-        "bull": "^4.12.2",
-        "ioredis": "^5.3.2"
-    },
-    "devDependencies": {
-        "@types/express": "^4.17.21",
-        "@types/cors": "^2.8.17",
-        "@types/node": "^20.9.0",
-        "@types/ws": "^8.5.10",
-        "@types/multer": "^1.4.11",
-        "@types/uuid": "^9.0.7",
-        "@types/jest": "^29.5.8",
-        "@typescript-eslint/eslint-plugin": "^6.12.0",
-        "@typescript-eslint/parser": "^6.12.0",
-        "eslint": "^8.54.0",
-        "jest": "^29.7.0",
-        "ts-jest": "^29.1.1",
-        "nodemon": "^3.0.2",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.2.2"
-    }
+  "name": "voice-chat-widget-server",
+  "version": "1.0.0",
+  "description": "Voice Chat Widget Server - Real-time voice transcription and conversation management",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "type-check": "tsc --noEmit"
+  },
+  "keywords": [
+    "voice",
+    "chat",
+    "transcription",
+    "webrtc",
+    "speechmatics",
+    "real-time"
+  ],
+  "author": "Bionic-AI-Solutions",
+  "license": "MIT",
+  "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
+    "express": "^4.18.2",
+    "socket.io": "^4.7.4",
+    "cors": "^2.8.5",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0",
+    "dotenv": "^16.3.1",
+    "winston": "^3.11.0",
+    "bull": "^4.12.2",
+    "ioredis": "^5.3.2",
+    "openai": "^4.20.1",
+    "puppeteer": "^21.6.1",
+    "nodemailer": "^6.9.7",
+    "uuid": "^9.0.1",
+    "axios": "^1.6.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.17",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.4",
+    "@types/uuid": "^9.0.7",
+    "@types/nodemailer": "^6.4.14",
+    "typescript": "^5.3.3",
+    "ts-node-dev": "^2.0.0",
+    "jest": "^29.7.0",
+    "@types/jest": "^29.5.8",
+    "ts-jest": "^29.1.1",
+    "eslint": "^8.55.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
