--- a/server/package.json
+++ b/server/package.json
@@ -39,7 +39,8 @@
     "puppeteer": "^21.6.1",
     "nodemailer": "^6.9.7",
     "uuid": "^9.0.1",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "ws": "^8.14.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -48,6 +49,7 @@
     "@types/node": "^20.10.4",
     "@types/uuid": "^9.0.7",
     "@types/nodemailer": "^6.4.14",
+    "@types/ws": "^8.5.10",
     "typescript": "^5.3.3",
     "ts-node-dev": "^2.0.0",
     "jest": "^29.7.0",
