--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,6 +60,9 @@ services:
       MINIO_USE_SSL: false
       LOG_LEVEL: info
       CORS_ORIGIN: http://localhost:3000,http://localhost:3001
+      SUPABASE_URL: http://host.docker.internal:54321
+      SUPABASE_ANON_KEY: sb_publishable_ACJWlzQHlZjBrEguHvfOxg_3BJgxAaH
+      SUPABASE_SERVICE_ROLE_KEY: sb_secret_N7UND0UgjKTVK-Uodkm0Hg_xSvEMPvz
     volumes:
       - ./server:/app
       - /app/node_modules
