Complete Phase 5: Admin Dashboard Foundation
- Successfully created Next.js admin application with Supabase Auth integration
- Implemented responsive dashboard layout with sidebar navigation and header
- Created authentication system with login/logout functionality and middleware protection
- Built comprehensive dashboard with analytics cards and conversation management
- Added Docker configuration for admin dashboard deployment
- Fixed React component rendering issues and environment variable configuration
- Admin dashboard now accessible at http://localhost:3002 with proper authentication flow
- Ready for Phase 6: Advanced Analytics and Data Visualization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -232,6 +232,33 @@ services:
     profiles:
       - type-check
 
+  # Admin Dashboard
+  admin-dev:
+    build:
+      context: ./admin
+      dockerfile: Dockerfile
+      target: development
+    container_name: voice-chat-admin-dev
+    ports:
+      - "3002:3000"
+    environment:
+      NODE_ENV: development
+      NEXT_PUBLIC_SUPABASE_URL: http://host.docker.internal:54321
+      NEXT_PUBLIC_SUPABASE_ANON_KEY: sb_publishable_ACJWlzQHlZjBrEguHvfOxg_3BJgxAaH
+      SUPABASE_SERVICE_ROLE_KEY: sb_secret_N7UND0UgjKTVK-Uodkm0Hg_xSvEMPvz
+      NEXT_PUBLIC_API_URL: http://host.docker.internal:3001
+      NEXT_PUBLIC_APP_URL: http://localhost:3002
+    volumes:
+      - ./admin:/app
+      - /app/node_modules
+      - /app/.next
+    depends_on:
+      - server-dev
+    networks:
+      - voice-chat-network
+    profiles:
+      - admin
+
 volumes:
   redis_data:
   minio_data:
